styles/style.css
:root {
    --system-violet: #6725A8;
    --system-magenta: #CB11AB;
    --system-white: #FFFFFF;
    --text-black: #000000;
    --system-green: #0CB477;
    --system-red: #F55123;
    --system-gray: #A0A0A4;
    --rulers-rulers-input: rgba(0, 0, 0, 0.20);
    --background-smoky: #F6F6FA;
    --dark-system-coral: #FF3B30;
}

body {
    font-family: 'Segoe UI', sans-serif;
    background: var(--system-violet);
}

.container {
    max-width: 1400px;
    margin: 0 auto;
}

/* header */

.header__container {
    padding: 16px 3px 16px 24px;
    max-width: 1373px;
    display: flex;
    align-items: end;
}

.header__menu_btn {
    display: flex;
    padding: 12px 10px;
    justify-content: center;
    align-items: center;
    border-radius: 8px;
    border: 1px solid rgba(255, 255, 255, 0.45);
    margin-right: 16px;
}

.header__menu_btn:hover {
    border: 1px solid var(--system-white);
}

.header__logo {
    color: var(--system-white);
    font-size: 28px;
    font-style: normal;
    font-weight: 600;
    line-height: 24px;
    font-variant: all-small-caps;
    letter-spacing: 0.56px;
    margin-right: 32px;
    min-width: 107px;
}

.header__search{
    width: 100%;
    max-width: 970px;
    display: flex;
    position: relative;
}

.header__input {
    width: 100%;
    max-width: 930px;
    padding: 10px 52px 14px 20px;
    border-radius: 36px;
    background: rgba(255, 255, 255, 0.20);
    border: 1px solid transparent;
    color: var(--system-white);
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: 24px;
}

.header__input::placeholder {
    color: var(--system-white);
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: 24px;
}

.header__input:focus {
    background: var(--system-white);
    color: var(--text-black);
    border: 1px solid transparent;
    outline: none;
}

.search_icon {
    position: absolute;
    right: 20px;
    padding: 10px 0;
}

.header__btns {
    text-align: center;
}

.header__btns-icons {
    margin-bottom: 7px;
}

.subicon_text {
    color: var(--system-white);
    font-size: 13px;
    font-style: normal;
    font-weight: 400;
    line-height: 16px;
}

.header__profile {
    margin-left: 32px;
}

.header__shopping-cart {
    margin-left: 43px;
    position: relative;
}

.shopping-status {
    position: absolute;
    top: -6px;
    right: 0px;
    background: var(--system-red);
    border-radius: 16px;
    padding: 0px 2px 1px;
    height: 15px;
    width: 12px;
    transform: rotate(0.074deg);
    display: inline-flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: var(--system-white);
    text-align: center;
    font-size: 10px;
    font-style: normal;
    font-weight: 700;
    line-height: 18px;
}

/* main */

.main {
    background: var(--background-smoky);
    padding: 24px 0;
    border-radius: 24px;
}

.container__main {
    padding: 10px 24px 16px;
    max-width: 1352px;
}

.basket__form {
    display: flex;
    justify-content: space-between;
}

/* basket__content */

.basket__content {
    max-width: 892px;
    width: 100%;
}

.basket-section {
    margin-bottom: 40px;
}

.basket-section__title {
    color: var(--text-black);
    font-size: 28px;
    font-style: normal;
    font-weight: 700;
    line-height: 36px;
    letter-spacing: -0.28px;
    margin-bottom: 27px;
}

.basket-checkbox-arrow {
    cursor: pointer;
}

.basket-section__checkbox-all {
    display: flex;
    justify-content: space-between;
    padding-bottom: 17px;
    margin-bottom: 11px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.10);
}

.basket-checkbox {
    position: relative;
}

.real-checkbox {
    position: absolute;
    width: 0;
    height: 0;
    opacity: 0;
    overflow: hidden;
    z-index: -1;
}

.custom-checkbox {
    position: relative;
    display: inline-block;
    width: 20px;
    height: 20px;
    background: var(--system-white);
    border: 1px solid var(--rulers-rulers-input);
    border-radius: 6px;
    vertical-align: sub;
    transition: 0.2s ease-in;
}

.custom-checkbox::before {
    content: '';
    display: inline-block;
    width: 14px;
    height: 14px;
    background-image: url("../img/done.svg");
    background-size: contain;
    background-repeat: no-repeat;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%) scale(0);
    margin-top: 1px;
    transition: 0.2s ease-in;
}

.basket-checkbox:hover .custom-checkbox {
    border: 1px solid var(--system-gray);
}

.real-checkbox:checked + .custom-checkbox::before {
    transform: translate(-50%, -50%) scale(1);
}

.real-checkbox:checked + .custom-checkbox {
    background: var(--system-magenta);
    border: 1px solid transparent;
}

.basket-checkbox-text {
    color: var(--text-black);
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 24px;
    margin-left: 10px;
}

/* items */

.basket-section__items {
    color: var(--text-black);
}

.basket-section__item {
    display: flex;
    margin-bottom: 20px;
}

.item__checkbox {
    display: flex;
    align-items: center;
    height: 96px;
}

.item__img {
    margin: 0 16px 0 12px;
}

.item__img img {
    max-width: 72px;
    border-radius: 8px;
}

.item__info {
    margin-right: auto;
}

.item__info-title {
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 24px;
    margin-bottom: 8px;
    width: 275px;
}

.item__info-data {
    font-size: 13px;
    font-style: normal;
    font-weight: 400;
    line-height: 16px;
    margin-bottom: 8px;
}

.item__info-color {
    margin-right: 16px;
}

.item__info-store,  .item__info-provider{
    color: var(--system-gray);
    font-size: 13px;
    font-style: normal;
    font-weight: 400;
    line-height: 16px;
}

.item__info-provider {
    display: flex;
    align-items: center;
    margin-bottom: 4px;
}

.item__info-provider img {
    margin-left: 6px;
}

.item__count {
    width: 100px;
    margin-right: 16px;
}
/* ... */

